# ops-agent

./: .coverage  .gitignore  Dockerfile  README.en.md  README.md  SCENARIOS.en.md  SCENARIOS.md  USER_GUIDE.en.md  USER_GUIDE.md  audit.py  chat.py  core.py  design.md  docker-compose.yaml  health.py  human.py  limits.py  llm.py  main.py  metrics.py  notebook.py  notifier.py  ops-agent.service  parsers.py  patch_applier.py  patch_generator.py  patch_loop.py  pipeline.py  pr_workflow.py  production_watcher.py  prompt_engine.py  pyproject.toml  reporter.py  requirements.txt  revert_generator.py  self-repair-and-fix.patch  self_context.py  self_diagnose.md  self_repair.py  source_locator.py  (+12 more)
agent/: __init__.py  human.py  parsers.py  pr_workflow.py
docker/: .env.example  README.md  compose.yaml
docs/: notebook-extension.md
infra/: __init__.py  git_host.py  production_watcher.py  tools.py
prompts/: assess.md  diagnose.md  observe.md  plan.md  reflect.md  system.md  verify.md
reliability/: __init__.py  health.py  pending_events.py
repair/: __init__.py  self_context.py  self_repair.py  source_locator.py
safety/: __init__.py  limits.py  patch_applier.py  patch_generator.py  patch_loop.py  revert_generator.py
scripts/: demo-entrypoint.sh  docker-entrypoint.sh  install-quick.sh  install.sh  ops-agent  watchdog.sh
src/: check.py  context_limits.py  core.py  init.py  reporter.py
templates/: pr-body.md  targets.example.yaml
tests/: conftest.py  test_agents_md.py  test_basic.py  test_blacklist.py  test_check.py  test_feishu_backend.py  test_i18n.py  test_init.py  (+12 more)
(+89 files in other folders)
